syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.grpc";
option java_outer_classname = "PetrolStationNewDataProto";

package petrolStationNewData;

message PetrolStationPredictionRequest {
  int32 year = 1;
}

message PetrolStationPredictionResponse {
  double prediction = 1;
}


service PetrolStationNewData {
  rpc PricePrediction(PetrolStationPredictionRequest) returns (PetrolStationPredictionResponse) {}
}